--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-maps": "^3.2.1",
+    "markerclustererplus": "^2.1.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.3",
     "react-scripts": "1.0.17"
   },
   "scripts": {
