--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "capstone_frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "google-maps": "^3.2.1",
     "markerclustererplus": "^2.1.4",
