--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:4000",
   "dependencies": {
     "google-maps": "^3.2.1",
+    "jquery": "^3.2.1",
     "markerclustererplus": "^2.1.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
