--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "valuelink": "^1.5.4"
   }
 }
