--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "markerclustererplus": "^2.1.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-foundation": "^0.9.2",
     "react-geocode": "0.0.1",
     "react-google-maps": "^9.4.3",
     "react-modal": "^3.1.10",
