--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "capstone_frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "./",
   "dependencies": {
     "classnames": "^2.2.5",
     "google-maps": "^3.2.1",
